File: testsuite/nexus-docker-testsupport/src/main/java/com/sonatype/nexus/Java21DockerClientITConfigFactory.java